--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
+sudo: false
 language: node_js
-
-node_js:
-  - stable
-  - lts/*
-  - "7"
-  - "4"
-
-after_success:
-- cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
-
+cache:
+  directories:
+    - ~/.npm
 notifications:
   email: false
+node_js: '8'
+install: npm install
+script: npm run validate
+after_success: kcd-scripts travis-after-success
+branches:
+  only: master
