--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "test-id-loader",
   "description": "Remove your test id with Webpack",
-  "version": "1.0.0",
+  "version": "0.0.0-semantically-released",
   "license": "MIT",
   "author": "Rasmus Josefsson <rajjejosefsson@gmail.com> (@rajjejoseefsson)",
   "contributors": [
@@ -21,23 +21,34 @@
     "lib"
   ],
   "scripts": {
+    "commit": "git-cz",
     "lint": "standard --env jest",
     "pretest": "rm -rf jest coverage jsdoc-api dmd test/builds",
     "test": "jest --verbose --coverage",
     "docs": "jsdoc2md lib/index.js > LOADER.md",
-    "release": "standard-version"
+    "release": "standard-version",
+    "semantic-release": "semantic-release"
   },
   "devDependencies": {
+    "commitizen": "^3.0.7",
+    "cz-conventional-changelog": "^2.1.0",
     "del": "^4.0.0",
     "jest": "^24.5.0",
     "jsdoc-to-markdown": "^4.0.1",
+    "semantic-release": "^15.13.3",
     "standard": "^12.0.1",
     "standard-version": "^5.0.2"
+  },
+  "czConfig": {
+    "path": "node_modules/cz-conventional-changelog"
   },
   "keywords": [
     "JS",
     "Loader",
     "TestId",
     "Webpack"
-  ]
+  ],
+  "dependencies": {
+    "kcd-scripts": "^1.1.1"
+  }
 }
