--- a/package.json
+++ b/package.json
@@ -23,11 +23,9 @@
   "scripts": {
     "commit": "git-cz",
     "validate": "kcd-scripts validate",
-    "lint": "standard --env jest",
     "pretest": "rm -rf jest coverage jsdoc-api dmd test/builds",
     "test": "jest --verbose --coverage",
     "docs": "jsdoc2md lib/index.js > LOADER.md",
-    "release": "standard-version",
     "semantic-release": "semantic-release"
   },
   "devDependencies": {
@@ -36,9 +34,7 @@
     "del": "^4.0.0",
     "jest": "^24.5.0",
     "jsdoc-to-markdown": "^4.0.1",
-    "semantic-release": "^15.13.3",
-    "standard": "^12.0.1",
-    "standard-version": "^5.0.2"
+    "semantic-release": "^15.13.3"
   },
   "czConfig": {
     "path": "node_modules/cz-conventional-changelog"
