--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ notifications:
 node_js: '8'
 install: npm install
 script: npm run validate
-after_success: npm run semantic-release
+after_success: kcd-scripts travis-after-success
 branches:
   only: master
